welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: identifier expected but 'new' found.
  var T : new Array[Color](i);
          ^